Fix MultiEffect shadow opacity

MultiEffect shadow coloring was fixed in QTBUG-123396. Unfortunately
that caused shadow opacity to be taken into account twice. First in
multiplication and second in mix which takes shadowColor including the
alpha. Instead, remove multiplication and make the shadowColor to have
premultiplied alpha.

Task-number: QTBUG-130582
Pick-to: 6.8
Change-Id: I14c95ef13009dada5f1125d98c019e9c5d7f8245
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>